trying to solve background image on mobile version

--- a/src/public/css/indexStyles/_homeBanner.css
+++ b/src/public/css/indexStyles/_homeBanner.css
@@ -15,6 +15,7 @@
 .home-banner {
     position: relative;
     text-align: center;
+    width: 100%;
     height: 100vh;
     background-image: url('../../upload/casa_portada_2.jpg');
     background-position: center center;
